--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
       "email": "marlinf@datashaman.com"
     }
   ],
-  "require": {},
+  "require": {
+    "datashaman/tongs": "^0.2.5"
+  },
   "require-dev": {
-    "datashaman/tongs": "^0.2.1",
     "phpunit/phpunit": "^8.5"
   },
   "config": {
